[gd_scene load_steps=16 format=2]

[ext_resource path="res://Font/LiberationSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=4]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 20.0
expand_margin_bottom = 20.0
shadow_color = Color( 0.568627, 0.388235, 0.0784314, 0.639216 )
shadow_size = 4
shadow_offset = Vector2( 0, 3 )

[sub_resource type="DynamicFont" id=1]
size = 64
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="DynamicFont" id=2]
size = 48
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=3]
size = 48
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=15]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "PlayHoverIn"
tracks/0/type = "value"
tracks/0/path = NodePath("MainContainer/MenuContainer/PlayButton/PlayLabel:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.760784, 0.560784, 0.137255, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "PlayHoverOut"
tracks/0/type = "value"
tracks/0/path = NodePath("MainContainer/MenuContainer/PlayButton/PlayLabel:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.760784, 0.560784, 0.137255, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "QuitHoverIn"
tracks/0/type = "value"
tracks/0/path = NodePath("MainContainer/MenuContainer/QuitButton/QuitLabel:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.760784, 0.560784, 0.137255, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "QuitHoverOut"
tracks/0/type = "value"
tracks/0/path = NodePath("MainContainer/MenuContainer/QuitButton/QuitLabel:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.760784, 0.560784, 0.137255, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -520.0
margin_top = -280.0
margin_right = 520.0
margin_bottom = 280.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MainContainer"]
margin_right = 1040.0
margin_bottom = 72.0
size_flags_vertical = 1
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.403922, 0.298039, 0.101961, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "AimBoosterGodot"
align = 1
valign = 1

[node name="MenuContainer" type="VBoxContainer" parent="MainContainer"]
margin_top = 76.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="MainContainer/MenuContainer"]
margin_left = 470.0
margin_top = 178.0
margin_right = 570.0
margin_bottom = 228.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayLabel" type="Label" parent="MainContainer/MenuContainer/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -27.5
margin_right = 50.0
margin_bottom = 27.5
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.568627, 0.388235, 0.0784314, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="MainContainer/MenuContainer"]
margin_left = 470.0
margin_top = 253.0
margin_right = 570.0
margin_bottom = 303.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitLabel" type="Label" parent="MainContainer/MenuContainer/QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -27.5
margin_right = 50.0
margin_bottom = 27.5
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.568627, 0.388235, 0.0784314, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/FadeOut = SubResource( 15 )
anims/PlayHoverIn = SubResource( 6 )
anims/PlayHoverOut = SubResource( 7 )
anims/QuitHoverIn = SubResource( 13 )
anims/QuitHoverOut = SubResource( 14 )

[node name="FadeOut" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tree_exiting" from="." to="." method="_on_MainMenu_tree_exiting"]
[connection signal="mouse_entered" from="MainContainer/MenuContainer/PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="MainContainer/MenuContainer/PlayButton" to="." method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="MainContainer/MenuContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="MainContainer/MenuContainer/QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="mouse_exited" from="MainContainer/MenuContainer/QuitButton" to="." method="_on_QuitButton_mouse_exited"]
[connection signal="pressed" from="MainContainer/MenuContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
